<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>compresion</class>
 <widget class="QDialog" name="compresion">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>486</width>
    <height>118</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="1">
    <widget class="QFrame" name="frame">
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="1" column="0">
       <widget class="QLabel" name="nombreL">
        <property name="text">
         <string>Nombre del archivo</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="nombreLE"/>
      </item>
      <item row="2" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="cancelarPB">
          <property name="text">
           <string>Cancelar</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="accionPB">
          <property name="text">
           <string>acción</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="0" column="0" colspan="2">
       <widget class="QLabel" name="tituloL">
        <property name="text">
         <string>acción</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>cancelarPB</sender>
   <signal>clicked()</signal>
   <receiver>compresion</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>118</x>
     <y>76</y>
    </hint>
    <hint type="destinationlabel">
     <x>142</x>
     <y>111</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
